<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".videocall.VideoCallActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <com.vigneshkumarapps.patient.videocall.view.VideoFrameLayout
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include android:id="@+id/controlViewMain"
            layout="@layout/control_view_layout"
            />

        <include android:id="@+id/progessBarView"
            layout="@layout/progress_bar_view" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/joinView"
        android:visibility="gone"
        android:background="#E0DFDF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/login_card_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:id="@+id/view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/purple_500"
                    android:layout_width="@dimen/login_screen_view_width"
                    android:layout_height="@dimen/login_screen_view_height"/>

                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/view"
                    app:layout_constraintBottom_toBottomOf="@id/view"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:text="@string/label_video_conference"
                    android:layout_marginStart="@dimen/margin_large"
                    android:textSize="@dimen/header_size"
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



                <EditText
                    android:hint="@string/label_room_key"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/view"
                    android:background="@drawable/border_rectanctangle"
                    android:id="@+id/roomKey"
                    android:textSize="@dimen/login_input_text_size"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_editext_height"
                    />

                <EditText
                    android:hint="@string/label_room_pin"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/roomKey"
                    android:background="@drawable/border_rectanctangle"
                    android:id="@+id/roomPin"
                    android:textSize="@dimen/login_input_text_size"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_editext_height"
                    />

                <Button
                    android:text="@string/label_join"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/roomPin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/btnJoin"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/login_editext_height"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>