<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/login_card_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/purple_500"
                android:layout_width="@dimen/login_screen_view_width"
                android:layout_height="@dimen/login_screen_view_height"/>

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/view"
                app:layout_constraintBottom_toBottomOf="@id/view"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:text="@string/label_login"
                android:layout_marginStart="@dimen/margin_large"
                android:textSize="@dimen/login_header_size"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/label_username"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/view"
                android:background="@drawable/border_rectanctangle"
                android:id="@+id/userName"
                android:textSize="@dimen/login_input_text_size"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_editext_height"
                android:inputType="text" />

            <EditText
                android:hint="@string/label_password"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/userName"
                android:background="@drawable/border_rectanctangle"
                android:id="@+id/pass"
                android:textSize="@dimen/login_input_text_size"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_editext_height"
                android:inputType="textPassword" />

            <Button
                android:text="@string/label_login"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pass"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/btnLogin"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_editext_height"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/progessBar"
        android:visibility="gone"
        layout="@layout/progress_bar_view"/>


</androidx.constraintlayout.widget.ConstraintLayout>